--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-USER=postgres
-PASSWORD=[YOUR-PASSWORD]
-HOST=db.lwcrykpalphdzocdihnv.supabase.co
-PORT=5432
-DBNAME=postgres
+DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.lwcrykpalphdzocdihnv.supabase.co:5432/postgres
+user=postgres
+password=[YOUR-PASSWORD]
+host=db.lwcrykpalphdzocdihnv.supabase.co
+port=5432
+dbname=postgres
