--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "representative-map-api",
+  "name": "public-representative-map",
   "version": "1.0.0",
-  "description": "API to fetch public representatives based on location",
-  "main": "server.js",
+  "description": "A map-based app to fetch public representative details based on location.",
+  "main": "api.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node api.js"
   },
+  "keywords": [
+    "map",
+    "representative",
+    "nodejs",
+    "postgres"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.11.1"
+    "pg": "^8.11.0"
   }
 }
