--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-fastapi==0.100.0
-uvicorn==0.23.0
-pydantic==2.2.1
-requests==2.31.0
-python-multipart==0.0.6
-jinja2==3.1.2
+# To load environment variables from the .env file
+python-dotenv==1.0.0
+
+# To connect to PostgreSQL databases
+psycopg2==2.9.7
